<resources>
    <string name="app_name">squadzframes</string>
    <string name="title_home">Home</string>
    <string name="title_events">Events</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_friends">Friends</string>
    <string name="title_more">More</string>
    <string name="main_title">Main Title</string>
    <string name="todo">TODO</string>
    <string name="invite">invite</string>
    <string name="username1">Justin King</string>
    <string name="username2">Michael Angelo</string>
    <string name="username3">David Dobrik</string>
    <string name="username4">Ravu Patel</string>
    <string name="squadzString">Squadz</string>
    <string name="event">EVENTS</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">E-mail</string>
    <string name="full_name">Full Name</string>
    <string name="Password">Password</string>
    <string name="dob">Date of Birth</string>
    <string name="uname">Username</string>
    <string name="fdob">MM/DD/YY</string>

    <string name="profile_name">Justin Antunes</string>
    <string name="bios">Hi, wazzap yall! Lets all play b-baall!!</string>
    <string name="dm">Direct Message</string>
    <string name="update_profile">Update Profile</string>
    <string name="justin_name">Justin King</string>
    <string name="justin_bio">Ball is life!</string>
    <string name="add">Add</string>
    <string name="message">Message</string>
    <string name="createevent">Create Event</string>
    <string name="partysize">Party Size</string>
    <string name="desc">Image or textview</string>
    <string name="find_players">Find Players</string>
    <!--Intro 1.3-->
    <string name="next">next</string>
    <string name="chat_meetup">Chat and Meet<br />Up</string>
    <!--Login Page-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <!--Intro 1.1-->
    <string name="get_started">Get Started</string>
    <string name="find_text">Want people <br />to find you?</string>
    <string name="welcome_text">Welcome<br /> to <br />Squadz</string>
    <string name="account_quest">Already have an account?</string>
    <string name="create_profile">Create My Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invite_players">Justin invited you to hoop.</string>
    <string name="edit_button">edit</string>
    <string name="remember_me">Remember me</string>

    <string name="location">Location: </string>
    <string name="host">Host: </string>
    <string name="time">Time: </string>
    <string name="party_size">Party Size: </string>

    <string name="location_info">Location Information </string>
    <string name="host_info">Host Information </string>
    <string name="time_info">Time Information </string>
    <string name="party_size_info">Party Size Information </string>

    <string name="details">Details</string>
    <string name="join">Join</string>

    <string name="meeting">Meeting Time: </string>
    <string name="gameplay">Select Type of Gameplay: </string>
    <string name="event_location">Location of Event: </string>
    <string name="done">Done</string>

    <string name="set_time">## : ## AM</string>
    <string name="set_location">555 Weston Manor Jr. Drive</string>


    <string-array name="party_details">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="comp_details">
        <item>Competitive</item>
        <item>Casual</item>
    </string-array>

    <string name="baller_name">Baller Name Here</string>
    <string name="view">View</string>
    <string name="title_activity_friends_list">FriendsListActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="friends">Friends</string>
    <string name="friends_list">Friends List</string>

    <string name="connect">Get connected with<br /> ballerz near you</string>

    <string name="make_plans">make plans to compete<br /> or have fun together</string>

    <string name="create_info">Create an account and find<br /> connect with others</string>

    <!--    string api key for google maps used by LocateEventMap.class -->
    <string name="google_maps_key" translatable="false">AIzaSyDrxoUOrSU8E8_9zi7Ceth-rvztIYZ4ANU</string>
    <string name="gameplaytype">Competitive</string>
    <string name="weather">Weather</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="title_activity_machine_location">MachineLocationActivity</string>

    <string name="locationname">locationName</string>

</resources>