<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:id="@+id/eventLayout">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.082"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/host"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.002"
                app:layout_constraintStart_toStartOf="@+id/location"
                app:layout_constraintTop_toBottomOf="@+id/location" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/time"
                app:layout_constraintStart_toStartOf="@+id/host"
                app:layout_constraintTop_toBottomOf="@+id/host" />

            <TextView
                android:id="@+id/party"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/party_size"
                app:layout_constraintStart_toStartOf="@+id/time"
                app:layout_constraintTop_toBottomOf="@+id/time" />

            <TextView
                android:id="@+id/location_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_info"
                app:layout_constraintBottom_toTopOf="@+id/host_info"
                app:layout_constraintStart_toStartOf="@+id/host_info"
                app:layout_constraintTop_toTopOf="@+id/location"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/host_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/host_info"
                app:layout_constraintStart_toEndOf="@+id/host"
                app:layout_constraintTop_toTopOf="@+id/host" />

            <TextView
                android:id="@+id/time_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_info"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/host_info"
                app:layout_constraintTop_toBottomOf="@+id/host"
                app:layout_constraintVertical_bias="0.2" />

            <TextView
                android:id="@+id/party_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/party_size_info"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/party"
                app:layout_constraintTop_toBottomOf="@+id/time_info"
                app:layout_constraintVertical_bias="0.875" />

            <Button
                android:id="@+id/details_button"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="28dp"
                android:backgroundTint="#090707"
                android:text="@string/details"
                android:textColor="@color/white"
                android:textSize="6sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/join_button"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:backgroundTint="#0AAC11"
                android:text="@string/join"
                android:textColor="@color/white"
                android:textSize="7sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/details_button"
                app:layout_constraintTop_toBottomOf="@+id/details_button"
                app:layout_constraintVertical_bias="0.001" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>